# levenshtein-rs

./: Cargo.toml  README.md
src/: levenshtein.rs  lib.rs  main.rs  structures.rs
tests/: simple_test.rs
