# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "levenshtein"
description = "Compute operational differences between two sequences using the Levenshtein algorithm."
repository = "https://github.com/syn-chromatic/levenshtein-rs"
authors = ["Synchromatic <synchromatic.github@gmail.com>"]
categories = ["text-processing"]
keywords = ["levenshtein", "distance", "algorithm"]
version = "1.0.0"
edition = "2021"
license = "MIT"